--- a/default/templates/articles.twig
+++ b/default/templates/articles.twig
@@ -13,11 +13,7 @@
 
 <body>
 	<div class="inlineHead">
-		<div>
-    <a href="{{ path_for('adduser') }}">Add Bl(a)ger</a>
-		<a href="{{ path_for('login') }}">I log me In ></a>
-		</div>
-		<h1>Molos blogoS</h1>
+		<h1>{{ user.username }}</h1>
 	</div>
 
     <table class="table">
@@ -64,4 +60,4 @@
         crossorigin="anonymous"></script>
 </body>
 
-</html>
+</html>z
