--- a/default/templates/adduser.twig
+++ b/default/templates/adduser.twig
@@ -1,3 +1,7 @@
+<?php
+session_start();
+>
+
 <!DOCTYPE html>
 <html lang="fr">
 
@@ -7,12 +11,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Blog form</title>
 </head>
 
 <body>
 
-    <a href="{{ path_for('index') }}">Back</a>
+		<a href="{{ path_for('index') }}">back to HOMEpage</a>
 
     <form action="{{ path_for('adduser')}}" method="POST">
         <div class="form-group row">
@@ -24,25 +29,25 @@
         <div class="form-group row">
             <label for="surname" class="col-4 col-form-label">Surname</label>
             <div class="col-8">
-                <input id="surname" name="surname" type="text" class="form-control here">
+                <input id="surname" name="surname" placeholder="surname" type="text" class="form-control here">
             </div>
         </div>
         <div class="form-group row">
             <label for="username" class="col-4 col-form-label">Username</label>
             <div class="col-8">
-                <input id="username" name="username" placeholder="username" type="text" class="form-control here">
+                <input id="username" name="username" placeholder="username" type="text" class="form-control here" required>
             </div>
         </div>
         <div class="form-group row">
             <label for="email" class="col-4 col-form-label">Email</label>
             <div class="col-8">
-                <input id="email" name="email" type="email" class="form-control here">
+                <input id="email" name="email" placeholder="myEmail@adress" type="email" class="form-control here" required>
             </div>
         </div>
         <div class="form-group row">
             <label for="password" class="col-4 col-form-label">Password</label>
             <div class="col-8">
-                <input id="password" name="pass" type="password" class="form-control here">
+                <input id="password" name="password" placeholder="???" type="password" class="form-control here" required>
             </div>
         </div>
         <div class="form-group row">
