--- a/default/templates/login.twig
+++ b/default/templates/login.twig
@@ -1,30 +1,32 @@
+<?php
+session_start();
+>
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Blog login</title>
 </head>
-
 <body>
 
-    <a href="{{ path_for('index') }}">Back</a>
+		<a href="{{ path_for('index') }}">back to HOMEpage</a>
 
-    <form action="{{ path_for('adduser')}}" method="POST">
+    <form action="{{ path_for('myBlog')}}" method="POST">
         <div class="form-group row">
             <label for="email" class="col-4 col-form-label">Email</label>
             <div class="col-8">
-                <input id="email" name="email" type="email" class="form-control here">
+                <input id="email" name="email" placeholder="myEmail@adress" type="email" class="form-control here" required >
             </div>
         </div>
         <div class="form-group row">
-            <label for="password" class="col-4 col-form-label">Email</label>
+            <label for="password" class="col-4 col-form-label">Password</label>
             <div class="col-8">
-                <input id="password" name="pass" type="password" class="form-control here">
+                <input id="password" name="password" placeholder="???" type="password" class="form-control here" required>
             </div>
         </div>
         <div class="form-group row">
@@ -46,5 +48,4 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
